fix: Heading styles on multiple lines are overlapping.

--- a/_assets/css/_styles.scss
+++ b/_assets/css/_styles.scss
@@ -201,7 +201,7 @@ h1, .h1 {
     font-size: 56px;
     font-weight: 300;
     font-family: $font-heading;
-    line-height: .8em;
+    line-height: .95em;
 }
 
 h2, .h2 {
@@ -993,12 +993,12 @@ article {
 
     h1, .h1 {
         font-size: 56px;
-        line-height: .8em;
+        line-height: .95em;
     }
 
     h2, .h2 {
         font-size: 36px;
-        line-height: .8em;
+        line-height: .95em;
         font-weight: 300;
         margin-top: 44px; /* 36 + 44 = 80px */
         margin-bottom: 10px;
